correction alignement

--- a/src/styles/scss/Profile.scss
+++ b/src/styles/scss/Profile.scss
@@ -1,28 +1,51 @@
 .container {
-    padding: 130px 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: calc(100vh - 80px); 
+    width: calc(100vw - 120px); 
+    padding: 50px 20px;
+    box-sizing: border-box;
+    margin-left: 130px;
+     margin-top: 110px;
     font-family: "Roboto", sans-serif;
 
     &__graph {
         display: flex;
-
+        width: 100%;
+        max-width: 1200px;
         &__chart {
             display: flex;
             flex-direction: column;
             gap: 20px;
+            flex: 1;
         }
     }
-    &__title h1 {
-        margin-bottom: 20px;
-
+    &__title {
+        width: 100%;
+        max-width: 1200px;
+        h1 {
+            margin-bottom: 20px;
+    
+        }
     }
+    
     &__title__name {
         color: red;
+    }
+
+    &__dashboard {
+        width: 100%;
+        max-width: 1200px;
+        margin-bottom: 20px;
     }
 
     &__etiquette {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         gap: 80px;
-        margin: 70px 20px;
+        margin: 50px 20px 20px 20px;
     }
 }
